(feat) Added multimodel notebook

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,16 +30,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langfuse.client.StatefulClient at 0x10f27a710>"
+       "<langfuse.client.StatefulClient at 0x10ab3c590>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,11 +47,46 @@
    "source": [
     "langfuse.score(\n",
     "    id=\"unique_id\",\n",
-    "    trace_id=\"bbb4f4bc-75af-4f14-8509-f96c70b79ca6\",\n",
+    "    # trace_id=\"bbb4f4bc-75af-4f14-8509-f96c70b79ca6\",\n",
     "    name=\"helpfulness\",\n",
     "    value=\"1\"\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<langfuse.client.StatefulClient at 0x10a9474d0>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "langfuse.score(\n",
+    "    id=f\"sample-entry-1\" ,# optional, can be used as an indempotency key to update the score subsequently\n",
+    "    trace_id=\"b91c41a5-3568-4310-b825-60e9c1fb147e\",\n",
+    "    trace_name=\"Sample_value\", # optional\n",
+    "    name=\"test-metrics\",\n",
+    "    value=0.5,\n",
+    "    data_type=\"NUMERIC\", # optional, inferred if not provided  \n",
+    "    comment=\"Evaluation\", # optional\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
